--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,3 +18,5 @@ services:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
+    ports: 
+      - "5433:5432"
