--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DB_PASSWORD=gallery
 DB_NAME=gallery
 DB_HOST=localhost
 DB_PORT=5433
+
+MINIO_ROOT_USER=gallery
+MINIO_ROOT_PASSWORD=gallery_password
