--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - DB_HOST=db
       - DB_PORT=5432
     ports: 
-      - "8080:8080"
+      - "8088:8080"
   
   db:
     image: postgres:12.11
@@ -20,3 +20,13 @@ services:
       - POSTGRES_DB=${DB_NAME}
     ports: 
       - "5433:5432"
+
+  storage:
+    image: minio/minio
+    command: ["server", "/data"]
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+    ports:
+      - "8039:9000"
+      - "8040:9001"
