--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ DB_PORT=5433
 
 MINIO_ROOT_USER=gallery
 MINIO_ROOT_PASSWORD=gallery_password
+
+AWS_ACCESS_KEY_ID=gallery
+AWS_SECRET_ACCESS_KEY=gallery_password
+AWS_DEFAULT_REGION=eu-central-1
