--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ DB_PORT=5433
 MINIO_ROOT_USER=gallery
 MINIO_ROOT_PASSWORD=gallery_password
 
-AWS_ACCESS_KEY_ID=gallery
-AWS_SECRET_ACCESS_KEY=gallery_password
-AWS_DEFAULT_REGION=eu-central-1
+AWS_ENDPOINT=localhost:8039
+AWS_API_KEY=gallery
+AWS_API_SECRET=gallery_password
+AWS_SSL=false
+AWS_BUCKET=gallery
